Remaining Pages Issues
Issues with Remaining pages for scrollbar and Mobile Devices. Shahid

--- a/LevelsPro/PlayerPanel/Styles/theme.css
+++ b/LevelsPro/PlayerPanel/Styles/theme.css
@@ -153,7 +153,9 @@ body {
 	width:122px;
 	float:left;
 	margin-left:10px;
-	}
+	position: relative;
+    z-index: 1;
+    }
 	
 .sec-right{
 	margin-right:23px;
@@ -1040,6 +1042,7 @@ and (min-width : 320px) {
 	margin-top:11px;
 	background:url(../images/fl-left.png);
 	height:50px;
+	position:relative;
 	}
 	
 .pd-flcont{
@@ -2336,7 +2339,7 @@ and (min-width : 500px) {
 	position:relative;
 	padding:5px 7px;
 	margin:0 0px 10px 0;
-	width:95%;
+	margin-right:60px;
 	}
 	
 .unread{border:2px solid #000;}
@@ -2348,6 +2351,7 @@ and (min-width : 500px) {
 .manager-cont{
 	margin:11px 0px 11px 11px;
 	position:relative;
+	margin-top:10px !important;
 	}
 	
 .fl-wrapper{
@@ -2971,6 +2975,8 @@ li.drop-hover .match-dataset-text {
 
 .redemption-holder{
 	margin:10px;
+	padding:10px;
+	position:relative;
 	}
 	
 .red-cont{
@@ -2978,6 +2984,7 @@ li.drop-hover .match-dataset-text {
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
 	margin-bottom:10px;
+	margin-right:15px;
 	}
 	
 .redemption-cont{
